added devices doc
