# api/responses/swagger/profile.go
@@ -1,0 +1,9 @@
+package swagger
+
+import "boilerplate/models"
+
+type DevicesResponse struct {
+	Msg  string          `json:"msg" example:""`
+	Ok   bool            `json:"ok" example:"true"`
+	Data []models.Device `json:"data" `
+}
